--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </p>
                 <div class="apresentacao__links">
                     <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                    <a class="apresentacao__links__" href="https://github.com/LucasPersonS">
+                    <a class="apresentacao__links__link" href="https://github.com/LucasPersonS">
                         <i class="fa-brands fa-github"></i>
                         Github
                     </a>
