--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <i class="fa-brands fa-github"></i>
                         Github
                     </a>
-                    <a class="apresentacao__links__link" href="https://www.linkedin.com/in/lucasperson">
+                    <a class="apresentacao__links__link" href="https://www.linkedin.com/in/lservollo/">
                         <i class="fa-brands fa-linkedin"></i>
                         Linkedin
                     </a>
