Modificando Header, Slider e mais!

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <nav class="cabecalho__menu">
                 <a class="cabecalho__menu__link" href="index.html">Home</a>
                 <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-                <a class="cabecalho__menu__link" href="projects.html">Projetos</a>
+                <a class="cabecalho__menu__link" href="teste.html">Projetos</a>
             </nav>
         </header>
         <main class="apresentacao">
             <section class="apresentacao__conteudo">
                 <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-                <p class="apresentacao__conteudo__texto">Opa, eu sou o Lucas Person. Sou um Programador na área de Front-End, com conhecimento em HTML, CSS, JavaScript, ReactJS e diversas outras ferramentas. Estudo na FIAP Escola de Tecnologia. Bora conversar?
+                <p class="apresentacao__conteudo__texto">Opa, eu sou o Lucas Person. Sou um Programador na área de Front-End, com conhecimento em HTML, CSS, JavaScript, ReactJS e outras ferramentas. Estudo na FIAP Escola de Tecnologia. Bora conversar?
                 </p>
                 <div class="apresentacao__links">
                     <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
@@ -38,7 +38,47 @@
             </section>
             <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto Lucas Person Desenvolvedor">
         </main>
+        <main>
+            <div class="slider" style="
+                --width: 50px;
+                --height: 50px;
+                --quantity: 9;
+            ">
+                <div class="list">
+                    <div class="item" style="--position: 1"><img src="images/slider1_1.png" alt=""></div>
+                    <div class="item" style="--position: 2"><img src="images/slider1_2.png" alt=""></div>
+                    <div class="item" style="--position: 3"><img src="images/slider1_3.png" alt=""></div>
+                    <div class="item" style="--position: 4"><img src="images/slider1_4.png" alt=""></div>
+                    <div class="item" style="--position: 5"><img src="images/slider1_5.png" alt=""></div>
+                    <div class="item" style="--position: 6"><img src="images/slider1_6.png" alt=""></div>
+                    <div class="item" style="--position: 7"><img src="images/slider1_7.png" alt=""></div>
+                    <div class="item" style="--position: 8"><img src="images/slider1_8.png" alt=""></div>
+                    <div class="item" style="--position: 9"><img src="images/slider1_9.png" alt=""></div>
+                    <div class="item" style="--position: 10"><img src="images/slider1_10.png" alt=""></div>
+                </div>
+            </div>
+    
+            <div class="slider" reverse="true" style="
+                --width: 200px;
+                --height: 200px;
+                --quantity: 9;
+            ">
+                <div class="list">
+                    <div class="item" style="--position: 1"><img src="images/slider2_1.png" alt=""></div>
+                    <div class="item" style="--position: 2"><img src="images/slider2_2.png" alt=""></div>
+                    <div class="item" style="--position: 3"><img src="images/slider2_3.png" alt=""></div>
+                    <div class="item" style="--position: 4"><img src="images/slider2_4.png" alt=""></div>
+                    <div class="item" style="--position: 5"><img src="images/slider2_5.png" alt=""></div>
+                    <div class="item" style="--position: 6"><img src="images/slider2_6.png" alt=""></div>
+                    <div class="item" style="--position: 7"><img src="images/slider2_7.png" alt=""></div>
+                    <div class="item" style="--position: 8"><img src="images/slider2_8.png" alt=""></div>
+                    <div class="item" style="--position: 9"><img src="images/slider2_9.png" alt=""></div>
+                </div>
+            </div>
+        </main>
+</main>
     </div>
+    
     <footer class="rodape">
         <p>&copy; 2024 Todos Direitos Reservados</p>
     </footer>
