Commit adicionando algumas infos

--- a/teste.html
+++ b/teste.html
@@ -67,7 +67,23 @@
                 <button class="botao">Veja mais</button>
             </div>
         </div>
+        <div class="item" style="background-image: url(./images/gemini.png);">
+            <div class="blur-overlay"></div>
+            <div class="content">
+                <div class="namedes">Gemini AI</div>
+                <div class="des">Chatbot usando Gemini AI em colaboração com Ogi Seguros<br><strong>Next.js | Tailwind | TypeScript</strong></div>
+                <button class="botao">Veja mais</button>
+        </div>
     </div>
+        <div class="item" style="background-image: url(./images/gemini.png);">
+            <div class="blur-overlay"></div>
+            <div class="content">
+                <div class="namedes">Ogi Site 2.0</div>
+                <div class="des">Website em colaboração com Ogi Seguros<br><strong>Next.js | Tailwind | TypeScript</strong></div>
+                <button class="botao">Veja mais</button>
+        </div>
+    </div>
+</div>
     <div class="button">
         <button class="prev"><i class="fa-solid fa-arrow-left"></i></button>
         <button class="next"><i class="fa-solid fa-arrow-right"></i></button>
