--- a/teste.html
+++ b/teste.html
@@ -17,78 +17,78 @@
                 <a class="cabecalho__menu__link" href="teste.html">Projetos</a>
             </nav>
         </header>
-<div class="container">
-    <div class="slide">
-        <div class="item" style="background-image: url(./images/ogi.png);">
-            <div class="blur-overlay"></div>
-            <div class="content">
-                <div class="name">Ogi Seguros</div>
-                <div class="des">Site desenvolvido para <br>Empresa Ogi Seguros <br> <strong>HTML | CSS | JS</strong></div>
-                <button class="botao">Veja mais</button>
+        <div class="container">
+            <div class="slide">
+                <div class="item" style="background-image: url(./images/ogi.png);">
+                    <div class="blur-overlay"></div>
+                    <div class="content">
+                        <div class="name">Ogi Seguros</div>
+                        <div class="des">Site desenvolvido para <br>Empresa Ogi Seguros <br> <strong>HTML | CSS | JS</strong></div>
+                        <button class="botao"><a href="https://ogiseguros.com.br" target="_blank">Veja mais</a></button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(./images/alura.png);">
+                    <div class="blur-overlay"></div>
+                    <div class="content">
+                        <div class="name">ALURA</div>
+                        <div class="des">Landing Page página de Streaming <br> <strong>HTML | CSS | JS</strong></div>
+                        <button class="botao"><a href="https://github.com/LucasPersonS/STREAMING" target="_blank">Veja mais</a></button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(./images/blue.png);">
+                    <div class="blur-overlay"></div>
+                    <div class="content">
+                        <div class="name">Blue Future</div>
+                        <div class="des">Website desenvolvido para um Projeto da Faculdade <br><strong>HTML | CSS | JS</strong></div>
+                        <button class="botao"><a href="https://github.com/LucasPersonS/GlobalSolutions" target="_blank">Veja mais</a></button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(./images/porti.png);">
+                    <div class="blur-overlay"></div>
+                    <div class="content">
+                        <div class="name">Portfólio</div>
+                        <div class="des">Website desenvolvido para demonstrar minhas habilidades no Front <br><strong>HTML | CSS | JS</strong></div>
+                        <button class="botao"><a href="https://github.com/LucasPersonS/PORTIFOLIO" target="_blank">Veja mais</a></button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(./images/porto.png);">
+                    <div class="blur-overlay"></div>
+                    <div class="content">
+                        <div class="namedes">Porto Login</div>
+                        <div class="des">Sistema de login desenvolvido para um Projeto em colaboração com a Porto Seguro <br><strong>HTML | CSS | JS</strong></div>
+                        <button class="botao"><a href="https://github.com/LucasPersonS/FRONT-END-CP3/tree/main/HTML/JS" target="_blank">Veja mais</a></button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(./images/ogi2.png);">
+                    <div class="blur-overlay"></div>
+                    <div class="content">
+                        <div class="namedes">Amil Dental</div>
+                        <div class="des">Landing Page para venda de planos dentais em colaboração com Ogi Seguros<br><strong>HTML | CSS | JS</strong></div>
+                        <button class="botao"><a href="amildental.ogiseguros.com.br" target="_blank">Veja mais</a></button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(./images/gemini.png);">
+                    <div class="blur-overlay"></div>
+                    <div class="content">
+                        <div class="namedes">Gemini AI</div>
+                        <div class="des">Chatbot usando Gemini AI em colaboração com Ogi Seguros<br><strong>Next.js | Tailwind | TypeScript</strong></div>
+                        <button class="botao"><a href="https://gemini-ai-chatbot-green-nu.vercel.app/" target="_blank">Veja mais</a></button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(./images/gemini.png);">
+                    <div class="blur-overlay"></div>
+                    <div class="content">
+                        <div class="namedes">Ogi Site 2.0</div>
+                        <div class="des">Website em colaboração com Ogi Seguros<br><strong>Next.js | Tailwind | TypeScript</strong></div>
+                        <button class="botao"><a href="https://gemini-ai-chatbot-green-nu.vercel.app/" target="_blank">Veja mais</a></button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="item" style="background-image: url(./images/alura.png);">
-            <div class="blur-overlay"></div>
-            <div class="content">
-                <div class="name">ALURA</div>
-                <div class="des">Landing Page página de Streaming <br> <strong>HTML | CSS | JS</strong></div>
-                <button class="botao">Veja mais</button>
+            <div class="button">
+                <button class="prev"><i class="fa-solid fa-arrow-left"></i></button>
+                <button class="next"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
-        </div>
-        <div class="item" style="background-image: url(./images/blue.png);">
-            <div class="blur-overlay"></div>
-            <div class="content">
-                <div class="name">Blue Future</div>
-                <div class="des">Website desenvolvido para um Projeto da Faculdade <br><strong>HTML | CSS | JS</strong></div>
-                <button class="botao">Veja mais</button>
-            </div>
-        </div>
-        <div class="item" style="background-image: url(./images/porti.png);">
-            <div class="blur-overlay"></div>
-            <div class="content">
-                <div class="name">Portfólio</div>
-                <div class="des">Website desenvolvido para demonstrar minhas habilidades no Front <br><strong>HTML | CSS | JS</strong></div>
-                <button class="botao">Veja mais</button>
-            </div>
-        </div>
-        <div class="item" style="background-image: url(./images/porto.png);">
-            <div class="blur-overlay"></div>
-            <div class="content">
-                <div class="namedes">Porto Login</div>
-                <div class="des">Sistema de login desenvolvido para um Projeto em colaboração com a Porto Seguro <br><strong>HTML | CSS | JS</strong></div>
-                <button class="botao">Veja mais</button>
-            </div>
-        </div>
-        <div class="item" style="background-image: url(./images/ogi2.png);">
-            <div class="blur-overlay"></div>
-            <div class="content">
-                <div class="namedes">Amil Dental</div>
-                <div class="des">Landing Page para venda de planos dentais em colaboração com Ogi Seguros<br><strong>HTML | CSS | JS</strong></div>
-                <button class="botao">Veja mais</button>
-            </div>
-        </div>
-        <div class="item" style="background-image: url(./images/gemini.png);">
-            <div class="blur-overlay"></div>
-            <div class="content">
-                <div class="namedes">Gemini AI</div>
-                <div class="des">Chatbot usando Gemini AI em colaboração com Ogi Seguros<br><strong>Next.js | Tailwind | TypeScript</strong></div>
-                <button class="botao">Veja mais</button>
         </div>
     </div>
-        <div class="item" style="background-image: url(./images/gemini.png);">
-            <div class="blur-overlay"></div>
-            <div class="content">
-                <div class="namedes">Ogi Site 2.0</div>
-                <div class="des">Website em colaboração com Ogi Seguros<br><strong>Next.js | Tailwind | TypeScript</strong></div>
-                <button class="botao">Veja mais</button>
-        </div>
-    </div>
-</div>
-    <div class="button">
-        <button class="prev"><i class="fa-solid fa-arrow-left"></i></button>
-        <button class="next"><i class="fa-solid fa-arrow-right"></i></button>
-    </div>
-</div>
-
 </body>
 </html>
